fix: trunk `<link>` attrs

--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
 <!-- Used by trunk -->
-
-<body>
-</body>
+<!DOCTYPE html>
+<html>
+    <head>
+        <link data-trunk rel="rust" />
+        <meta charset="utf-8" />
+        <title>leptos-web-sys-file-reading</title>
+    </head>
+    <body></body>
+</html>
